--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,30 +18,28 @@
         />
 
     <EditText
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/username"
         android:layout_below="@+id/signin"
+        android:layout_marginHorizontal="40dp"
         android:background="#e8e8e8"
         android:hint="Username"
-        android:textColorHint="#999999"
-        android:layout_marginHorizontal="40dp"
         android:padding="20dp"
-        />
+        android:textColorHint="#616161" />
 
     <EditText
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/password"
         android:layout_below="@id/username"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="20dp"
         android:background="#e8e8e8"
         android:hint="Password"
-        android:textColorHint="#999999"
         android:inputType="textPassword"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="40dp"
         android:padding="20dp"
-        />
+        android:textColorHint="#616161" />
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
@@ -63,7 +61,20 @@
         android:textColor="#1d25b5"
         android:layout_below="@+id/loginbtn"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/skip"
+        android:text="Continue as guest"
+        android:textColor="@color/black"
+        android:layout_below="@id/forgotpass"
+        android:textSize="14dp"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="30dp"
         />
 
     <TextView
