--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,17 +65,19 @@
         />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/skip"
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/skip"
+        android:layout_below="@id/forgotpass"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
         android:text="Continue as guest"
         android:textColor="@color/black"
-        android:layout_below="@id/forgotpass"
-        android:textSize="14dp"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="30dp"
-        />
+        android:textSize="14dp" />
 
     <TextView
         android:layout_width="wrap_content"
