--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,9 +13,9 @@
         android:id="@+id/firstcard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="10dp"
         app:shapeAppearance="@style/ShapeAppearance.Material3.MediumComponent"
-        app:cardElevation="7dp">
+        app:cardElevation="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,9 +70,9 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="10dp"
         app:shapeAppearance="@style/ShapeAppearance.Material3.MediumComponent"
-        android:elevation="17dp">
+        android:elevation="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -126,9 +129,9 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="10dp"
         app:shapeAppearance="@style/ShapeAppearance.Material3.MediumComponent"
-        android:elevation="17dp">
+        android:elevation="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -177,9 +180,5 @@
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
-
-
-
-
-
 </RelativeLayout>
+</ScrollView>
