--- a/app/src/main/res/layout/activity_nandi_hills.xml
+++ b/app/src/main/res/layout/activity_nandi_hills.xml
@@ -43,13 +43,14 @@
                 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"/>
 
             <com.google.android.material.button.MaterialButton
+                style="?attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/nandiloc"
                 android:layout_below="@id/blogDescription"
                 android:layout_marginHorizontal="@dimen/cardview_default_elevation"
-                style="?attr/borderlessButtonStyle"
                 android:text="Get Location"
-                android:textAllCaps="false"/>
+                android:textAllCaps="false" />
 
         </RelativeLayout>
     </RelativeLayout>
